# atomicmemory-python

./: .gitignore  .vulture_whitelist.py  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml
atomicmemory/: __init__.py  _version.py
atomicmemory/client/: __init__.py  async_memory_client.py  atomic_memory_client.py  memory_client.py
atomicmemory/contract/: __init__.py  v1.py
atomicmemory/core/: __init__.py  errors.py  events.py  logging.py  retry.py  url.py  validation.py
atomicmemory/embeddings/: __init__.py  base.py  sentence_transformers.py
atomicmemory/entities/: __init__.py  async_client.py  client.py  errors.py  types.py
atomicmemory/kv_cache/: __init__.py  adapter.py  memory_storage.py  sqlite_storage.py
atomicmemory/memory/: __init__.py  capability_profiles.py  filters.py  meta_fact_filter.py  pipeline.py  provider.py  registry.py  service.py  types.py
atomicmemory/providers/: __init__.py
atomicmemory/providers/atomicmemory/: __init__.py  agents.py  async_handle_impl.py  async_provider.py  audit.py  config.py  config_handle.py  handle.py  handle_impl.py  http.py  lessons.py  lifecycle.py  mappers.py  path.py  provider.py  (+1 more)
atomicmemory/search/: __init__.py  chunking.py  ranking.py  semantic_search.py  similarity.py
atomicmemory/storage/: __init__.py  _mapping.py  async_client.py  client.py  errors.py  types.py
atomicmemory/utils/: __init__.py  environment.py
contract/: CONTRACT.md  VENDORED.json
contract/v1/: capabilities-descriptor.schema.json  ingest-input.schema.json  provider-contract.schema.json  search-result-page.schema.json
examples/: async_pipeline.py  basic_ingest_search.py  local_search.py
scripts/: refresh_contract.py
tests/: _lifecycle_fakes.py  _pipeline_fakes.py  conftest.py  test_api_key_redaction.py  test_error_subclasses.py  test_package_imports.py  test_pipeline_hooks.py  test_pipeline_hooks_async.py  test_version_consistency.py
tests/client/: test_async_memory_client.py  test_atomic_memory_client.py  test_client_lifecycle.py  test_memory_client.py
tests/contract/: _schema_registry.py  test_codec.py  test_conformance.py  test_vendored_tree.py
tests/core/: test_errors.py  test_events.py  test_retry.py  test_url.py
tests/embeddings/: test_sentence_transformers.py
tests/entities/: __init__.py  test_entities_client.py  test_entities_client_async.py  test_entities_input_validation.py  test_entities_input_validation_async.py  test_entities_response_validation.py  test_entities_response_validation_async.py  test_entities_types.py
tests/kv_cache/: test_memory_storage.py  test_sqlite_storage.py
tests/memory/: test_capability_profiles.py  test_filters.py  test_meta_fact_filter.py  test_provider_base.py  test_registry.py  test_service.py  test_service_lifecycle.py  test_types.py
tests/providers/: test_config_ssrf.py
tests/search/: test_chunking.py  test_semantic_search.py  test_similarity.py
tests/storage/: __init__.py  test_async_storage_client.py  test_storage_client.py
(+38 files in other folders)
