[project]
name = "atomicmemory"
version = "1.0.1"
description = "Python client SDK for AtomicMemory memory and artifact storage."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AtomicMemory" }]
keywords = ["memory", "llm", "agent", "rag", "atomicmemory", "mem0", "hindsight"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
    "vulture>=2.11",
]

[project.urls]
Homepage = "https://github.com/atomicstrata/atomicmemory-python"
Repository = "https://github.com/atomicstrata/atomicmemory-python"
Issues = "https://github.com/atomicstrata/atomicmemory-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atomicmemory"]

[tool.hatch.build.targets.wheel.force-include]
"atomicmemory/py.typed" = "atomicmemory/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "atomicmemory",
    "examples",
    "tests",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "uv.lock",
]
exclude = [".gitignore"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
# Ruff B008: Pydantic Field() in defaults is idiomatic.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
".vulture_whitelist.py" = ["B018", "F821"]

[tool.ruff.lint.isort]
known-first-party = ["atomicmemory"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = false

# Optional-extras module overrides should be added only when the
# corresponding adapter imports exist; mypy warns on overrides that do
# not match any imported module.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a live backend and explicit provider-specific environment",
]
addopts = "-ra"

[tool.vulture]
min_confidence = 90
paths = ["atomicmemory", "tests", ".vulture_whitelist.py"]
exclude = ["tests/**/fixtures/**"]
